# Library-Manager

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
LibraryManager/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
LibraryManager/templates/: base-create-update.html  base-delete.html  base-list.html  base.html
members/: models.py  urls.py  views.py
members/migrations/: 0001_initial.py
members/templates/members/: create_member.html  delete_member.html  detail_member.html  list_member.html  update_member.html
users/: urls.py  views.py
users/templates/users/: login.html  logout.html  password_change.html
