[tool.poetry]
name = "library-manager"
version = "1.0.0"
description = "Library Manager"
authors = ["RezaRajabi", "AlirezaYeganeh"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
crispy-tailwind = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
